cookie 简化原理代码添加

--- a/EcmaScript5.html
+++ b/EcmaScript5.html
@@ -75,6 +75,8 @@
             }
           };
           ecma5Demo.init();
+
+          // json 规范写法， 键值对都用引号括住；
       </script>
     </body>
 </html>
