--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -192,7 +192,7 @@
         <div class="u_face">
             <img id="uFace" src="images/dlam.jpg">
             <div class="u-face-pop" id="uFacePop">
-              <p>分手时，她给了我一个吻，那感觉——就好像人民日报一样真实…… </p>
+              <p>妨碍我们学习的不是未知的，而是已知的，尤其是那种略知一二的。 </p>
               <div class="triangle-ico"></div>
             </div>
         </div>
