缓存localStorage工具类测试代码更新。。。

--- a/event.html
+++ b/event.html
@@ -54,6 +54,14 @@
             btn_a.onClick = click1;
             btn_a.onmousedown = mouseDown1;
             // 关于 mouseover 与 mouseenter区别：http://www.cnblogs.com/kingwell/archive/2012/09/09/2677258.html
+            // mouseover与mouseenter
+            // 不论鼠标指针穿过被选元素或其子元素，都会触发 mouseover 事件。
+            // 只有在鼠标指针穿过被选元素时，才会触发 mouseenter 事件。
+
+            // mouseout与mouseleave
+            // 不论鼠标指针离开被选元素还是任何子元素，都会触发 mouseout 事件。
+            // 只有在鼠标指针离开被选元素时，才会触发 mouseleave 事件。
+
             btn_a.onmouseover = mouseOver1;
             btn_a.onmouseup = mouseUp1;
 
