--- a/IESupport.html
+++ b/IESupport.html
@@ -89,7 +89,7 @@
         // 10.IE6下 ；margin 设置为负值无效， 父类添加zoom:1, 自身添加position：relative后方有效；(仍然不行， 就添加 top:-XXpx; 实现)
         // 11.IE6下 position: fixed; 无效；absolute替代实现；http://www.cnblogs.com/blosaa/archive/2011/12/29/2305990.html
         // 12.IE6下 左浮动（或右浮动）如果是最后一个节点， 则会自动换行；http://www.wangmengyu.cn/?p=139
-        
+        // 13.IE6下 设置为 display:none;并且生效后的dom节点竟然不消失！！！（神奇，待模拟重现）解决：ie6 下在原有基础上新增样式：visibility:hidden; (还不行就用其他方式隐藏， 例如：宽高为零，绝对定位位置偏移至无法看见的位置；)
       </script>
 
     </body>
