--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -99,7 +99,11 @@
         
           /*...样式实现，兼容IE6+，火狐下显示有点小问题*/
           .text_overflow{width:27em; white-space:nowrap; text-overflow:ellipsis; -o-text-overflow:ellipsis; overflow:hidden;}
-
+          
+          /*CSS 图片灰阶处理*/
+          /*http://www.zhangxinxu.com/wordpress/2012/08/css-svg-filter-image-grayscale/*/
+          .gray { -webkit-filter: grayscale(100%);-moz-filter: grayscale(100%);-ms-filter: grayscale(100%);-o-filter: grayscale(100%);filter: grayscale(100%);filter: gray; }
+          /*http://www.cnblogs.com/qiyebao/p/4028129.html*/
         </style>
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
