剔除无意义日志

--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -44,7 +44,7 @@
           .radius-btn{ border-radius: 5px;cursor:pointer;padding:5px;margin: 5px;background-color: #eee; }
           .radius-btn:hover{ background-color:#ddd; }
 
-          /*文字垂直居中对齐*/
+          /*文字垂直居中对齐，table-cell IE8以下不兼容； http://www.hacke2.cn/div-center/*/
           .vertical-wrap{ display:table-cell; width:550px; height:100px; padding:0 15px; border:4px solid #beceeb; color:#069; font-size:14px; vertical-align:middle; }
           .ver-txt{ display:inline-block;  font-size:14px;  vertical-align:middle; }
           .demo { display: none; }
