--- a/IESupport.html
+++ b/IESupport.html
@@ -84,7 +84,7 @@
         // 1.低版本浏览器，js数组、对象注意不能有多余的“逗号”；
         // 例如：var aArray = [{'arg1': '1'}, {'arg2': '2'},];  var aObj = {'arg1': '1',}; 别遗漏最后逗号；
         // 2.IE7以下浏览器(主要IE6) 一般标签样式不支持 伪类hover ， 要使在IE5及IE6中也有效，则必须在外面包裹一个a标签且该a标签必须有href属性；
-        // 3.IE6 IE7下不太支持 inline-block, 反而对浮动支持较好； http://www.cnblogs.com/leejersey/archive/2012/07/11/2586506.html
+        // 3.IE6 IE7下不太支持 inline-block, 反而对浮动支持较好； http://www.cnblogs.com/leejersey/archive/2012/07/11/2586506.html, http://www.cnblogs.com/leejersey/archive/2012/07/11/2586506.html
         //   IE6 下 inline-block vertical-align 中不是全文字，则无效；  
         // 4.IE6 下事件处理（参考 utils/base.js   EventUtil ）
         // 5.getAttribute("class") 在IE下可能无法获取正确类名， IE对应的应该为 getAttribute("className")
