--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -65,7 +65,7 @@
           }
 
           /*css三角形, css三角形产生器：http://apps.eky.hk/css-triangle-generator/zh-hant*/
-          .css-triangle { width: 0; height: 0; border-style: solid dashed dashed dashed; border-width: 200px 105px 0 105px; border-color: #007bff transparent transparent transparent; }
+          .css-triangle { width: 0; height: 0; border-style: solid dashed dashed dashed;*border-style:dashed; border-width: 200px 105px 0 105px; border-color: #007bff transparent transparent transparent; }
           
           .u_face{ position:relative; padding-top: 30px; width: 60px; margin: 0 auto; cursor:pointer; }
           .u_face img{ width: 60px; height: 60px; display: block; border-radius: 50%;}
